<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="326dp"
        android:layout_height="58dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="150dp">

        <EditText
            android:id="@+id/etNombreMain"
            android:layout_width="209dp"
            android:layout_height="49dp"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="26dp" />

        <Button
            android:id="@+id/bBuscarMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/Buscar"
            android:onClick="onClick"/>

    </GridLayout>

    <ListView
        android:id="@+id/lvMain"
        android:layout_width="match_parent"
        android:layout_height="404dp"
        android:layout_gravity="center"
        android:fastScrollEnabled="true"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="bottom"
        android:paddingLeft="60dp">

        <Button
            android:id="@+id/bCerrarMain"
            android:layout_column="3"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/Cerrar"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/bAddMain"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/Agregar"
            android:onClick="onClick"/>
    </GridLayout>

</android.support.design.widget.CoordinatorLayout>
